fixed: OC: Printed forms sometimes have page break in the middle of items(OC-11750)

--- a/app/views/styles/component/_print-oc.scss
+++ b/app/views/styles/component/_print-oc.scss
@@ -61,8 +61,15 @@
         }
 
         .or-comment-widget__content__history__row__main--audit {
-            padding-top: 0;
-            height: 35px;
+            padding: 0 20px 0 10px;
+
+            .or-comment-widget__content__history__row__main__comment {
+                
+                .or-comment-widget__content__history__row__main__comment__meta {
+                    display: none;
+                }
+
+            }
         }
 
         .or-comment-widget__content__history__row__main:before, .or-comment-widget__content__history__row__main:after {
